syntax = "proto3";

package com.coralogixapis.notification_center.notifications.v1;

import "com/coralogixapis/notification_center/notifications/v1/notification.proto";
import "com/coralogixapis/notification_center/common/v1/config_fields.proto";

option go_package = "com/coralogixapis/notification_center/notifications/v1";

message TestResult {
  message Success {}
  message Failure {
    string message = 1;
    optional uint32 status_code = 2;
  }

  oneof result {
    Success success = 1;
    Failure failure = 2;
  }
}

message TestNotification {
  string id = 1;
  uint32 team_id = 2;
  string connector_id = 3;
  string output_schema_id = 4;
  repeated ConnectorConfigField connector_config = 6;
  repeated MessageConfigField message_config = 7;
  repeated NotificationOperation available_operations = 8;
  repeated NotificationAttachment attachments = 9;
}
